--- a/web/templates/leaderboard.html
+++ b/web/templates/leaderboard.html
@@ -8,7 +8,7 @@
     <tr>
       <th>Rank</th>
       <th>User</th>
-      <th>Questions Correct (Total: {{ num_questions }})</th>
+      <th>Questions Correct (Total {{ fold }}): {{ num_questions }})</th>
     </tr>
     <tbody>
       {% for user, score in scores %}
